--- a/src/shared/styles/index.scss
+++ b/src/shared/styles/index.scss
@@ -10,16 +10,21 @@
     box-sizing: border-box;
 }
 
-#root {
-    max-width: 1280px;
-    width: 100%;
-    margin: 0 auto;
-}
-
 html,
 body {
     min-height: 100%;
     min-height: 100vh;
     padding: 0;
     margin: 0;
+}
+
+p {
+    margin: 0;
+    padding: 0;
+}
+
+#root {
+    width: 100%;
+    height: 100%;
+    min-height: 100vh;
 }
