add width prop in Container

--- a/src/shared/styles/variables.scss
+++ b/src/shared/styles/variables.scss
@@ -39,5 +39,6 @@
         var(--font-family-main);
 
     --container-max-width: 1200px;
+    --container-max-width-min: 900px;
     --container-padding: 0 10px;
 }
