--- a/src/shared/ui/Text/Text.module.scss
+++ b/src/shared/ui/Text/Text.module.scss
@@ -6,7 +6,7 @@
 .size_m {
     font-size: var(--font-size-m);
     line-height: var(--font-line-m);
-    letter-spacing: 0.5px;
+    // letter-spacing: 0.5px;
 }
 
 .size_l {
