add CartButton to header

--- a/src/widgets/Header/ui/CartButton/CartButton.module.scss
+++ b/src/widgets/Header/ui/CartButton/CartButton.module.scss
@@ -2,4 +2,30 @@
     display: inline-flex;
     align-items: center;
     gap: 6px;
+
+    svg {
+        width: 20px;
+        height: 20px;
+    }
+}
+
+.icon {
+    position: relative;
+}
+
+.count {
+    position: absolute;
+    top: 12px;
+    left: 10px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 14px;
+    height: 14px;
+    background: var(--color-orange);
+    color: var(--color-white);
+    font-size: 6px;
+    line-height: 8px;
+    font-weight: 400;
+    border-radius: 50%;
 }
