--- a/src/shared/styles/fonts.scss
+++ b/src/shared/styles/fonts.scss
@@ -18,3 +18,10 @@
     font-weight: 600;
     font-display: swap;
 }
+
+@font-face {
+    font-family: 'Jost';
+    src: url('../assets/fonts/Jost-Medium.woff2') format('woff2');
+    font-weight: 500;
+    font-display: swap;
+}
