add color property to Text

--- a/src/shared/ui/Text/Text.module.scss
+++ b/src/shared/ui/Text/Text.module.scss
@@ -44,3 +44,43 @@
 .medium {
     font-weight: 500;
 }
+
+.orange {
+    color: var(--color-orange);
+}
+
+.orangeDark {
+    color: var(--color-orange-dark);
+}
+
+.orangeWhite {
+    color: var(--color-orange-white);
+}
+
+.violet {
+    color: var(--color-violet);
+}
+
+.white {
+    color: var(--color-white);
+}
+
+.gray100 {
+    color: var(--color-gray-100);
+}
+
+.gray200 {
+    color: var(--color-gray-200);
+}
+
+.gray500 {
+    color: var(--color-gray-500);
+}
+
+.gray600 {
+    color: var(--color-gray-600);
+}
+
+.gray900 {
+    color: var(--color-gray-900);
+}
