--- a/src/shared/styles/mixins.scss
+++ b/src/shared/styles/mixins.scss
@@ -1,3 +1,5 @@
+@import './variables.scss';
+
 @mixin with-transition(
     $properties,
     $duration: 0.2s,
@@ -10,4 +12,16 @@
 
 @mixin transition($properties...) {
     @include with-transition($properties);
+}
+
+@mixin with-breakpoint($breakpoint) {
+    @media screen and (max-width: $breakpoint) {
+        @content;
+    }
+}
+
+@mixin mobile {
+    @include with-breakpoint($breakpoint-mobile) {
+        @content;
+    }
 }
