--- a/src/shared/styles/variables.scss
+++ b/src/shared/styles/variables.scss
@@ -1,3 +1,5 @@
+$breakpoint-mobile: 767px;
+
 :root {
     --color-violet: #484283;
     --color-orange: #f14f4f;
@@ -41,4 +43,6 @@
     --container-max-width: 1200px;
     --container-max-width-min: 900px;
     --container-padding: 0 10px;
+
+    --breakpoint-mobile: #{$breakpoint-mobile};
 }
