--- a/src/widgets/Header/ui/Header/Header.module.scss
+++ b/src/widgets/Header/ui/Header/Header.module.scss
@@ -1,4 +1,7 @@
+@import '~/shared/styles/mixins.scss';
+
 .header {
+    position: relative;
     background: var(--color-violet);
     color: var(--color-white);
     padding: 25px 0;
@@ -13,4 +16,30 @@
 .menu {
     display: flex;
     gap: 40px;
+}
+
+.burger {
+    display: none;
+}
+
+@include mobile {
+    .menu {
+        display: none;
+        position: absolute;
+        flex-direction: column;
+        top: 100%;
+        right: 0;
+        left: 0;
+        padding: 20px;
+        background: var(--color-violet);
+        gap: 10px;
+
+        &.isOpen {
+            display: inline-flex;
+        }
+    }
+
+    .burger {
+        display: inline-flex;
+    }
 }
