--- a/src/widgets/Catalog/ui/Catalog.module.scss
+++ b/src/widgets/Catalog/ui/Catalog.module.scss
@@ -14,7 +14,8 @@
 
 .grid {
     display: grid;
-    grid-template-columns: repeat(3, 1fr);
+    // grid-template-columns: repeat(3, 1fr);
+    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
     gap: 20px 35px;
 }
 
