--- a/src/widgets/Hero/ui/Hero.module.scss
+++ b/src/widgets/Hero/ui/Hero.module.scss
@@ -1,8 +1,11 @@
+@import '~/shared/styles/mixins.scss';
+
 .hero {
     position: relative;
     background-color: var(--color-violet);
     color: var(--color-white);
     z-index: 0;
+    overflow: hidden;
 }
 
 .inner {
@@ -10,6 +13,10 @@
     padding: 115px 0;
     border-top: 1px solid var(--color-white);
     z-index: 1;
+
+    @include mobile {
+        padding: 40px 0;
+    }
 }
 
 .title {
@@ -35,4 +42,9 @@
     line-height: 300px;
     font-weight: 700;
     z-index: 0;
+
+    @include mobile {
+        font-size: 100px;
+        line-height: 200px;
+    }
 }
