--- a/src/shared/styles/variables.scss
+++ b/src/shared/styles/variables.scss
@@ -1,3 +1,4 @@
+$breakpoint-desktop: 1200px;
 $breakpoint-mobile: 767px;
 
 :root {
@@ -44,5 +45,6 @@ $breakpoint-mobile: 767px;
     --container-max-width-min: 900px;
     --container-padding: 0 10px;
 
+    --breakpoint-desktop: #{$breakpoint-desktop};
     --breakpoint-mobile: #{$breakpoint-mobile};
 }
