--- a/src/widgets/ProductDetail/ui/ProductDetail.module.scss
+++ b/src/widgets/ProductDetail/ui/ProductDetail.module.scss
@@ -1,7 +1,18 @@
+@import '~/shared/styles/mixins.scss';
+
 .productDetail {
     display: grid;
     grid-template-columns: 520px 1fr;
     gap: 40px;
+
+    @include desktop {
+        display: flex;
+        flex-direction: column;
+    }
+}
+
+.images {
+    width: 100%;
 }
 
 .imageWrap {
@@ -11,6 +22,11 @@
     justify-content: center;
     border-radius: 4px;
     border: 1px solid var(--color-gray-200);
+
+    img {
+        max-width: 100%;
+        max-height: 100%;
+    }
 }
 
 .imagesWrapActive {
@@ -37,6 +53,8 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
+    flex-wrap: wrap;
+    gap: 20px;
 }
 
 .category {
@@ -73,11 +91,24 @@
     padding: 12px;
     border-radius: 6px;
     background: var(--color-gray-100);
+
+    @include mobile {
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        gap: 20px;
+    }
 }
 
 .priceContent {
     display: flex;
     align-items: center;
+
+    @include mobile {
+        flex-direction: column;
+        justify-content: center;
+        gap: 20px;
+    }
 }
 
 .priceInfo {
@@ -85,7 +116,12 @@
     flex-direction: column;
     padding: 0 24px 0 20px;
     border-right: 1px solid var(--color-gray-200);
+    align-items: center;
     gap: 2px;
+
+    @include mobile {
+        border-right: none;
+    }
 }
 .discountInfo {
     display: flex;
