--- a/src/pages/CartPage/ui/CartPage.module.scss
+++ b/src/pages/CartPage/ui/CartPage.module.scss
@@ -1,3 +1,5 @@
+@import '~/shared/styles/mixins.scss';
+
 .page {
     padding: 48px 0;
 }
@@ -10,6 +12,11 @@
     display: grid;
     grid-template-columns: 1fr 356px;
     gap: 48px;
+
+    @include desktop {
+        display: flex;
+        flex-direction: column;
+    }
 }
 
 .productList {
@@ -19,6 +26,11 @@
     border: 1px solid var(--color-gray-500);
     border-radius: 4px;
     gap: 10px;
+
+    @include mobile {
+        padding: 0;
+        border: none;
+    }
 }
 
 .totalRow {
