fix types in Text for storybook

--- a/src/shared/ui/Text/Text.module.scss
+++ b/src/shared/ui/Text/Text.module.scss
@@ -1,3 +1,9 @@
+@import '~/shared/styles/variables';
+
+.text {
+    font-family: var(--font-family-main);
+}
+
 .size_s {
     font-size: var(--font-size-s);
     line-height: var(--font-line-s);
